--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TrabajoPractico</string>
     <string name="hola">hola</string>
+    <string name="text_personaje">Personajes</string>
+    <string name="text_libros">Libros</string>
 </resources>
