--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">TrabajoPractico</string>
-    <string name="hola">hola</string>
+    <string name="text_casas">Casas</string>
     <string name="text_personaje">Personajes</string>
     <string name="text_libros">Libros</string>
     <string name="text_cerrar_sesion">Cerrar Sesión</string>
+    <string name="text_prueba">Prueba</string>
 </resources>
